<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="facebook_app_id">2810068725947955</string>
    <string name="fb_login_protocol_scheme">fb2810068725947955</string>

    <string name="app_name">Mobile App</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="phone">Phone</string>
    <string name="_91">+91</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="you_can_also_sign_in_with">YOU CAN ALSO SIGN IN WITH</string>
    <string name="this_is_dummy">This is dummy</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="forget">Forget Password?</string>
    <string name="sign_in_with">Sign in with</string>
    <string name="dont_have_account">Dont have an Account?</string>
    <string name="have_account">Have an Account?</string>
    <string name="logout">Logout</string>
    <string name="save">Save</string>
    <string name="logo">logo</string>
    <string name="transition_button">transition button</string>
</resources>
