<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_arc">

        <TextView
            android:id="@+id/_title_profile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:paddingHorizontal="@dimen/dp_40"
            android:text="@string/title_profile"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_40"
            android:textStyle="italic|bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/profile_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_80"
            android:layout_marginBottom="@dimen/dp_20"
            android:background="@drawable/bg_shadow"
            android:padding="@dimen/dp_10"
            app:layout_constraintBottom_toTopOf="@id/logout_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/_title_profile">

            <ImageButton
                android:id="@+id/setting_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_5"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_baseline_settings_24"
                app:layout_constraintStart_toStartOf="@id/profile_container"
                app:layout_constraintTop_toTopOf="@id/profile_container"
                tools:ignore="ContentDescription" />

            <ImageButton
                android:id="@+id/edit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_5"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_baseline_edit_24"
                app:layout_constraintEnd_toEndOf="@id/profile_container"
                app:layout_constraintTop_toTopOf="@id/profile_container"
                tools:ignore="ContentDescription" />

            <EditText
                android:id="@+id/name_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_80"
                android:background="@android:color/transparent"
                android:ellipsize="end"
                android:enabled="false"
                android:gravity="center"
                android:importantForAutofill="no"
                android:inputType="text"
                android:lines="1"
                android:paddingVertical="@dimen/dp_5"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp_20"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/profile_container"
                app:layout_constraintStart_toStartOf="@id/profile_container"
                app:layout_constraintTop_toTopOf="@id/profile_container"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/email_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                app:layout_constraintEnd_toEndOf="@id/profile_container"
                app:layout_constraintStart_toStartOf="@id/profile_container"
                app:layout_constraintTop_toBottomOf="@id/name_edit_text" />

            <View
                android:id="@+id/_line"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_1"
                android:layout_marginTop="@dimen/dp_10"
                android:background="#0F000000"
                app:layout_constraintEnd_toEndOf="@id/profile_container"
                app:layout_constraintStart_toStartOf="@id/profile_container"
                app:layout_constraintTop_toBottomOf="@id/email_text_view" />

            <ImageView
                android:id="@+id/_demo11"
                android:layout_width="@dimen/dp_30"
                android:layout_height="@dimen/dp_30"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_20"
                android:src="@drawable/ic_baseline_settings_24"
                app:layout_constraintStart_toStartOf="@id/profile_container"
                app:layout_constraintTop_toBottomOf="@id/_line"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/_demo12"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_10"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="Function 1"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp_20"
                app:layout_constraintBottom_toBottomOf="@id/_demo11"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/_demo11"
                app:layout_constraintTop_toTopOf="@id/_demo11" />

            <ImageView
                android:id="@+id/_demo21"
                android:layout_width="@dimen/dp_30"
                android:layout_height="@dimen/dp_30"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_20"
                android:src="@drawable/ic_baseline_settings_24"
                app:layout_constraintStart_toStartOf="@id/profile_container"
                app:layout_constraintTop_toBottomOf="@id/_demo11"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/_demo22"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_10"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="Function 2"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp_20"
                app:layout_constraintBottom_toBottomOf="@id/_demo21"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/_demo21"
                app:layout_constraintTop_toTopOf="@id/_demo21" />

            <ImageView
                android:id="@+id/_demo31"
                android:layout_width="@dimen/dp_30"
                android:layout_height="@dimen/dp_30"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginBottom="@dimen/dp_100"
                android:src="@drawable/ic_baseline_settings_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/profile_container"
                app:layout_constraintTop_toBottomOf="@id/_demo21"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/_demo32"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_10"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="Function 3"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp_20"
                app:layout_constraintBottom_toBottomOf="@id/_demo31"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/_demo31"
                app:layout_constraintTop_toTopOf="@id/_demo31" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <com.datn.mobileapp.utils.view.CircleImageView
            android:id="@+id/avatar_image_view"
            android:layout_width="@dimen/dp_150"
            android:layout_height="@dimen/dp_150"
            android:layout_marginTop="@dimen/dp_20"
            app:layout_constraintEnd_toEndOf="@id/profile_container"
            app:layout_constraintStart_toStartOf="@id/profile_container"
            app:layout_constraintTop_toBottomOf="@id/_title_profile" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/logout_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_15"
            android:shadowColor="@android:color/black"
            android:text="@string/logout"
            android:textAllCaps="false"
            android:textColor="#2196F3"
            android:textSize="@dimen/sp_20"
            app:backgroundTint="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:strokeColor="@android:color/black" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_15"
            android:paddingHorizontal="@dimen/dp_40"
            android:paddingVertical="@dimen/dp_5"
            android:shadowColor="@android:color/black"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_20"
            app:backgroundTint="#2196F3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:strokeColor="@android:color/black" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>